1.0	20080721 17:17
	* proc_fs interface giving basic packet stats
	* Support for 2.6.25 kernels (might even work in 2.6.26)
	* packet list to reduce replays even when window is 0
	* tag option, allows for more efficient packet processing when
	  you have multiple keys/services
	* support for iptables 1.4.1.1 (and 1.4.1 but who is using it?)
	* added version to modinfo
	* added Changelog file (will it be kept up-to-date?)
	* packet format is incompatible with earlier versions
	* both knock programs support old and new style
	  use -o for knock and add old=1 in the ini file for knock.py

1.1 20080723 16:42
	* removed source port from hash, forgot that NAT can mess it up

1.2 um dang I really meant to keep up with this too

1.3	20090210 10:45
	* added support for 2.6.28 kernels
	* added support for iptables 1.4.2

1.4 20090523 10:34
	* initial support for libxtables, just enough to get by and work
	* added port option in config so you can use this in conjunction
	  with a firewall without having to have tons of open udp ports
	* added support for 2.6.29 kernels
	* added support for iptables 1.4.3.2

1.5 20091204 9:06
	* added support for iptables 1.4.4 & 1.4.5 (just added symlinks)
	* checked against 2.6.31

1.6 20100128 9:15
	* checked against 1.4.6 iptables and 2.6.32 kernel
	* added pre-compiled vyatta-5 stuff
	* switched proc output to be inside framesize (newer gcc complained)
	* c# knock client, encrypts config information

1.7 20100708 9:18
	* checked against 1.4.8 iptables and 2.6.34 kernel

1.8 mystery

1.9 20110616 11:45
	* checked against iptables 1.4.10, 1.4.11.1 and kernel 2.6.39

1.10 not sure

1.11 20140211 12:00 CST
	* check against iptables 1.4.21 and kernels 3.4 and 3.10
	* reworked proc fs stuff to accomodate 3.x kernels
	  this moves it to /proc/ipt_pkd/stats instead of wherever it was before
	  and is turned off for kernels >= 3.7